<resources>
    <string name="app_name">Bookjas</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Buku</string>
    <string name="title_login_register">Masuk/Registrasi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat datang! "</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password tidak valid</string>
    <string name="login_failed">"Login gagal"</string>
    <string name="text_login">Login</string>
    <string name="grafik_login">grafik login</string>
    <string name="ucapan_selamat_datang_di_login">Selamat datang di BookJas</string>
    <string name="text_pengguna_baru">Pengguna baru?</string>
    <string name="text_daftar">Daftar</string>
    <string name="grafik_register">grafik register</string>
    <string name="text_register">Buat Akun</string>
    <string name="text_register_2">Buat akun Anda untuk pengalaman yang lebih baik</string>
    <string name="text_register_3">Register</string>
    <string name="text_sudah_punya_akun">Sudah punya akun?</string>
    <string name="text_masuk">Masuk</string>
    <string name="text_nama">Nama</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_start">Let’s Explore BookJas!</string>
    <string name="text_start_2">Yuk atuh baca buku gaes!</string>
    <string name="text_selamat_datang">Selamat datang di Bookjas!</string>
    <string name="grafik_start">grafik start</string>
    <string name="nama">Edgar Peacemaker</string>
    <string name="title_buku_yang_baru_dipinjam">Buku yang Baru Dipinjam</string>
    <string name="text_jumlah">2 Buku</string>
    <string name="title_rekomendasi_buku">Ingin Baca Buku Apa?</string>
    <string name="text_author">Perwira Satria</string>
    <string name="text_judul_buku">Lorem Ipsum</string>
    <string name="tv_perpustakaan">Perpustakaan</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="text_detail_buku">Detail Buku</string>
    <string name="isbn">ISBN:</string>
    <string name="isbn2">1234567890123</string>
    <string name="tersedia">Tersedia</string>
    <string name="jumlah_buku">16</string>
    <string name="satuan_buku">unit</string>
    <string-array name="tahun_terbit">
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
        <item>2024</item>
    </string-array>
    <string name="nilai_tahun_terbit">2023</string>
    <string-array name="penerbit">
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
        <item>Shueisha</item>
    </string-array>
    <string name="nilai_terbit">Gramedia</string>
    <string-array name="deskripsi">
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
        <item>Lorem ipsum dolor sit amet. Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim.</item>
    </string-array>
    <string name="title_settings">Settings</string>
    <string name="profile_saya">Profile Saya</string>
    <string name="tv_edit_foto_profile">Edit Foto Profile</string>
    <string name="tv_edit_foto_profile_2">Silahkan edit foto profile anda</string>
    <string name="civ_foto_profile">Ini adalah foto profile</string>
    <string name="iv_icon_camera">Ini adalah icon camera</string>
    <string name="btn_edit_foto_profile">Selanjutnya</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_delete">Delete</string>
    <string name="deskripsi_buku">Ut duis esse non ea dolor cupidatat qui exercitation anim duis. Sit officia excepteur sint laboris eiusmod aliqua ad in Lorem enim. Nostrud deserunt commodo occaecat nostrud non cillum proident ea laborum amet deserunt ex excepteur.</string>
    <string name="jumlah_buku_lengkap">16 unit</string>
    <string name="titik_dua">:</string>
    <string name="tv_kategori_buku">Kategori</string>
    <string name="et_kategori_buku">Masukkan kategori buku</string>
    <string name="tv_label_edit_kategori">Edit Kategori</string>
</resources>