<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.buku.DetailBukuFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/navy_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_detail_buku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_detail_buku"
            android:textColor="@color/alabaster_white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_foto_buku"
            android:layout_width="165dp"
            android:layout_height="0dp"
            android:layout_marginTop="-90dp"
            android:contentDescription="@string/deskripsi"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/judul_buku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/text_judul_buku"
            android:textColor="@color/navy_blue"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_foto_buku" />

        <TextView
            android:id="@+id/penulis_buku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_author"
            android:textColor="@color/grey"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/judul_buku" />

        <TextView
            android:id="@+id/isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isbn"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/isbn2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/penulis_buku" />

        <TextView
            android:id="@+id/isbn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/isbn2"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/isbn"
            app:layout_constraintTop_toBottomOf="@id/penulis_buku" />

        <TextView
            android:id="@+id/tersedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tersedia"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/isbn2" />

        <TextView
            android:id="@+id/jumlah_buku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jumlah_buku"
            android:textColor="@color/grey"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/satuan_buku"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tersedia" />

        <TextView
            android:id="@+id/satuan_buku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/satuan_buku"
            android:textColor="@color/navy_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/jumlah_buku"
            app:layout_constraintTop_toBottomOf="@id/tersedia" />

        <TextView
            android:id="@+id/tahun_terbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tahun_terbit"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/penerbit"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/jumlah_buku" />

        <TextView
            android:id="@+id/nilai_tahun_terbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_tahun_terbit"
            android:textColor="@color/navy_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/tahun_terbit"
            app:layout_constraintStart_toStartOf="@id/tahun_terbit"
            app:layout_constraintTop_toBottomOf="@id/tahun_terbit" />

        <TextView
            android:id="@+id/penerbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/penerbit"
            android:textColor="@color/grey"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tahun_terbit"
            app:layout_constraintTop_toBottomOf="@id/jumlah_buku" />

        <TextView
            android:id="@+id/nilai_terbit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nilai_terbit"
            android:textColor="@color/navy_blue"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@id/penerbit"
            app:layout_constraintStart_toStartOf="@id/penerbit"
            app:layout_constraintTop_toBottomOf="@id/penerbit" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:text="@string/deskripsi"
            android:textColor="@color/navy_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tahun_terbit" />

        <TextView
            android:id="@+id/nilai_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            android:justificationMode="inter_word"
            android:text="@string/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/deskripsi"
            tools:targetApi="o" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>