<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.edit.fotoprofile.EditFotoProfileFragment">

    <TextView
        android:id="@+id/tv_edit_foto_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_edit_foto_profile"
        android:textColor="@color/navy_blue"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_edit_foto_profile_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_edit_foto_profile_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_edit_foto_profile_2"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/civ_foto_profile"
        app:layout_constraintStart_toStartOf="@id/tv_edit_foto_profile"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_foto_profile" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_foto_profile"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginVertical="56dp"
        android:contentDescription="@string/civ_foto_profile"
        android:src="@drawable/x_chan"
        app:layout_constraintBottom_toTopOf="@+id/btn_edit_foto_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_edit_foto_profile_2" />

    <ImageView
        android:id="@+id/iv_icon_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/iv_icon_camera"
        android:src="@drawable/ic_camera"
        app:layout_constraintBottom_toBottomOf="@+id/civ_foto_profile"
        app:layout_constraintEnd_toEndOf="@+id/civ_foto_profile" />

    <Button
        android:id="@+id/btn_edit_foto_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/btn_edit_foto_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/civ_foto_profile" />

</androidx.constraintlayout.widget.ConstraintLayout>