<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="96dp"
    tools:context=".ui.admin.editkategori.EditKategoriFragment">

    <View
        android:id="@+id/v"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-40dp"
        android:background="@color/navy_blue"
        app:layout_constraintBottom_toBottomOf="@id/iv_ic_buku"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_ic_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/welcome"
        android:src="@drawable/baseline_book_24_putih"
        app:layout_constraintStart_toStartOf="@+id/v"
        app:layout_constraintTop_toTopOf="@+id/v" />

    <TextView
        android:id="@+id/tv_label_edit_kategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/tv_label_edit_kategori"
        android:textColor="@color/alabaster_white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_ic_buku"
        app:layout_constraintStart_toEndOf="@id/iv_ic_buku"
        app:layout_constraintTop_toTopOf="@id/iv_ic_buku" />

    <!-- Kategori -->
    <TextView
        android:id="@+id/tv_kategori_buku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/tv_kategori_buku"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ll_kategori_buku"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v"
        app:layout_constraintVertical_chainStyle="packed" />

    <LinearLayout
        android:id="@+id/ll_kategori_buku"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_border"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp"
        app:layout_constraintBottom_toTopOf="@id/btn_edit_kategori"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_kategori_buku">

        <EditText
            android:id="@+id/et_kategori_buku"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@android:color/transparent"
            android:hint="@string/et_kategori_buku"
            android:inputType="text"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_edit_kategori"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/btn_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_kategori_buku" />

</androidx.constraintlayout.widget.ConstraintLayout>